update index and sidebar

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -12,7 +12,7 @@ hero:
       link: /关于我们/
       icon: right-arrow
     - text: 在 Github 中查看
-      link: https://github.com/CS-BAOYAN/CS-BAOYAN-2025
+      link: https://github.com/x1x1217/Echo-Wiki
       icon: external
       variant: minimal
 ---
@@ -28,13 +28,13 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 	<Card title="保研分享" icon="open-book">
 		往届学长学姐经验汇总。
 	</Card>
-	<Card title="文书准备" icon="add-document">
+	<Card title="考研规划" icon="add-document">
 		如何套磁/写简历。
 	</Card>
-	<Card title="资料汇总" icon="setting">
+	<Card title="就业经验" icon="setting">
 		往届题目，机试记录。
 	</Card>
-	<Card title="常识扫盲" icon="open-book">
+	<Card title="考公心得" icon="open-book">
 		扫盲计算机科学保研必备的基础知识。
 	</Card>
 </CardGrid>
