--- a/src/content/docs/关于我们.mdx
+++ b/src/content/docs/关于我们.mdx
@@ -7,14 +7,14 @@ import { Icon } from '@astrojs/starlight/components';
 import { LinkButton } from '@astrojs/starlight/components';
 
 :::note[注意]
-在任何情况下，未经允许的申请请仅申请一个群聊，否则我们将会拒绝你的申请，任何转载本群链接的行为均需告知本事项，依此造成的后果自负。
+注意我们可爱的小裤衩
 :::
 
 <Tabs>
-  <TabItem label="绿群一群">**群号：943826679，点击链接加入群聊：[https://qm.qq.com/q/4adNf8CGso](https://qm.qq.com/q/4adNf8CGso)**</TabItem>
-  <TabItem label="绿群二群">**群号：620876705，点击链接加入群聊：[https://qm.qq.com/q/ekkWvb8Yg0](https://qm.qq.com/q/ekkWvb8Yg0)**</TabItem>
-  <TabItem label="绿群三群">**群号：612207580，点击链接加入群聊：[https://qm.qq.com/q/fSu3mWgK4M](https://qm.qq.com/q/fSu3mWgK4M)**</TabItem>
-  <TabItem label="绿群四群">**群号：934495061，点击链接加入群聊：[https://qm.qq.com/q/XhajbZ7TuG](https://qm.qq.com/q/XhajbZ7TuG)**</TabItem>
+  <TabItem label="裤衩美照1">**查看裤衩美照**</TabItem>
+  <TabItem label="裤衩美照2">**查看裤衩美照**</TabItem>
+  <TabItem label="裤衩美照3">**查看裤衩美照**</TabItem>
+  <TabItem label="裤衩美照4">**查看裤衩美照**</TabItem>
 </Tabs>
 
 ## CONTRIBUTION
